fix overflow issue

--- a/src/app/dashboard/purchases/[purchaseId]/PurchaseOverview.module.scss
+++ b/src/app/dashboard/purchases/[purchaseId]/PurchaseOverview.module.scss
@@ -2,6 +2,7 @@
 
 .container {
     width: 100%;
+    overflow-x: auto;
 }
 
 .calendar {
